--- a/index.html
+++ b/index.html
@@ -173,6 +173,9 @@
         </div>
     </section>
 
+    <script async="async" data-cfasync="false" src="//pl27694101.revenuecpmgate.com/a418539a017d6d0d3a32f430d28f2984/invoke.js"></script>
+<div id="container-a418539a017d6d0d3a32f430d28f2984"></div>
+
     <!-- How to Play Section -->
     <section id="how-to-play" class="py-16">
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -475,6 +478,7 @@
     </script>
 </body>
 </html>
+
 
 
 
